# lab5

./: ArraySequence.hpp  CMakeLists.txt  CreateArray.hpp  Dict.hpp  DictList.hpp  DictNode.hpp  DictNodeList.h  DynamicArray.hpp  HelpArray.hpp  HelpList.hpp  Hist.hpp  Idictionary.hpp  LinkedList.hpp  ListSequence.hpp  Paginator.hpp  SubExpressionArray.hpp  SubExpressionList.hpp  h.py  keyboard.hpp  lab5.ipynb  main.cpp  pagination_time_test.hpp  ready_hist_tests.hpp  ready_paginator_tests.hpp  ready_subexpressions_tests.hpp  sort.hpp  time_hist_test.hpp  visualisation.hpp  Лабораторная 5.docx
